test: add a test using JVMArgs